# ExtraStimulantsPlus

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  QUICKSTART.md  README.md  justfile  mod.json  override.cfg  pck_patcher.py  project.godot
.github/workflows/: build.yml
addons/game_analytics/: plugin.cfg  plugin.gd
addons/godotsteam/: godotsteam_plugin.gd
addons/steam_sdk/: plugin.cfg  plugin.gd
docs/: BUILD_AND_INSTALL.md  SHIM_ARCHITECTURE.md
esp_bootstrap/: ESPBootstrap.gd  override.cfg
esp_shim/: ESPShim.gd
examples/cool_mod/: main.gd  mod.json
mods/daily_challenge/: daily_panel.gd  main.gd  mod.json  seed.gd
scenes/level_editor/: level_browser.tscn  obstacle_creator.tscn
scripts/campaign/: obstacle_sequence_serializer.gd
tools/esp-tool/: Cargo.toml  README.md
tools/esp-tool/src/: cli.rs  config.rs  error.rs  gamelog.rs  github.rs  gui.rs  install.rs  launch.rs  loadplan.rs  main.rs  modhash.rs  modmgr.rs  pack.rs  pck.rs  scaffold.rs  steam.rs
tools/esp-tool/src/scaffold/templates/campaign/: README.md  main.gd  mod.json
tools/esp-tool/src/scaffold/templates/campaign/levels/: example.json
tools/esp-tool/src/scaffold/templates/events/: README.md  main.gd  mod.json
tools/esp-tool/src/scaffold/templates/feature/: README.md  main.gd
tools/esp-tool/src/scaffold/templates/feature/scripts/core/: example_feature.gd
tools/esp-tool/src/scaffold/templates/minimal/: README.md  main.gd  mod.json
tools/esp-tool/src/scaffold/templates/settings/: README.md  main.gd  mod.json
tools/esp-tool/src/scaffold/templates/ui/: README.md  main.gd  mod.json
(+66 files in other folders)
