[package]
name = "esp-tool"
version = "0.0.2"
edition = "2021"
license = "MIT"

[[bin]]
name = "esp"
path = "src/main.rs"

[dependencies]
eframe = "0.26"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "2.2.0"
walkdir = "2.5.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "2.1"
dirs = "5.0"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"

[profile.release]
lto = true
codegen-units = 1
strip = true
